fixing image height issue on mobile

--- a/app/assets/stylesheets/stays.scss
+++ b/app/assets/stylesheets/stays.scss
@@ -129,6 +129,7 @@
 .review-image-thumb {
     width: 75px;
     height: auto;
+    max-height: 120px;
     border-radius: 100px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
